Fix too tall checkbox

--- a/static/style.scss
+++ b/static/style.scss
@@ -277,6 +277,10 @@ input {
 	height: 2.7rem;
 }
 
+input[type="checkbox"] {
+	height: auto;
+}
+
 textarea {
 	resize: vertical;
 }
